Use a dedicated name for all branches

--- a/.github/workflows/fix-cs.yml
+++ b/.github/workflows/fix-cs.yml
@@ -14,4 +14,5 @@ jobs:
                   token: ${{ secrets.GITHUB_TOKEN }}                    
                   commit-message: Update test file with current time
                   title: Update time
+                  branch: update-time-bot/${{ github.ref }}
                   
