--- a/.github/workflows/fix-cs.yml
+++ b/.github/workflows/fix-cs.yml
@@ -13,6 +13,6 @@ jobs:
               with:
                   token: ${{ secrets.GITHUB_TOKEN }}                    
                   commit-message: Update test file with current time
-                  title: Update time
+                  title: Update time in ${{ github.ref }}
                   branch: update-time-bot/${{ github.ref }}
                   
