--- a/.github/workflows/fix-cs.yml
+++ b/.github/workflows/fix-cs.yml
@@ -16,4 +16,11 @@ jobs:
                   title: Update time in ${{ github.ref }}
                   branch: update-time-bot/${{ github.ref }}
                   assignees: ${{ github.actor }}
+
+            - uses: unsplash/comment-on-pr@v1.2.0
+              env:
+                  GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+              with:
+                  msg: "Check out this message!"
                   
+                
