Notify only in PRs

--- a/.github/workflows/fix-cs.yml
+++ b/.github/workflows/fix-cs.yml
@@ -18,6 +18,7 @@ jobs:
                   assignees: ${{ github.actor }}
 
             - uses: unsplash/comment-on-pr@v1.2.0
+              if: github.event_name == 'pull_request'
               env:
                   GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
               with:
