--- a/.github/workflows/fix-cs.yml
+++ b/.github/workflows/fix-cs.yml
@@ -20,6 +20,7 @@ jobs:
             - uses: unsplash/comment-on-pr@v1.2.0
               env:
                   GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+              if: ${{ env.PULL_REQUEST_NUMBER }}
               with:
                   msg: |
                     Check out #${{ env.PULL_REQUEST_NUMBER }}
