--- a/.github/workflows/fix-cs.yml
+++ b/.github/workflows/fix-cs.yml
@@ -21,7 +21,7 @@ jobs:
             - uses: unsplash/comment-on-pr@v1.2.0
               env:
                   GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-              if: ${{ steps.cpr.outputs.pr_number }}
+              if: steps.cpr.outputs.pr_number
               with:
                   msg: |
                     Check out #${{ steps.cpr.outputs.pr_number }}
