Make sure we show a failure if changes need to be merged

--- a/.github/workflows/fix-cs.yml
+++ b/.github/workflows/fix-cs.yml
@@ -27,3 +27,5 @@ jobs:
               with:
                   msg: |
                     @${{ github.actor }} please apply the coding standard fixes from #${{ steps.cpr.outputs.pr_number }}
+            - run: exit 1 # fail check if CS needs to be fixed
+              if: steps.cpr.outputs.pr_number
