--- a/.github/workflows/fix-cs.yml
+++ b/.github/workflows/fix-cs.yml
@@ -1,31 +1,39 @@
 on: [push]
-name: Test commit
+name: Coding Standards
 
 jobs:
     test-it:
-        name: Test PR
+        name: PHP-CS-Fixer
         runs-on: ubuntu-18.04
         steps:
-            - uses: actions/checkout@v2
-            - uses: docker://oskarstark/php-cs-fixer-ga:2.15.3
-            - uses: peter-evans/create-pull-request@v2
-              id: cpr
+
+            - name: Checkout code
+              uses: actions/checkout@v2
+
+            - name: Run PHP-CS-Fixer
+              uses: docker://oskarstark/php-cs-fixer-ga:2.15.3
+              
+            - name: Create PR for CS fixups
+              uses: peter-evans/create-pull-request@v2
+              id: create-pull-request
               with:
                   token: ${{ secrets.GITHUB_TOKEN }}                    
-                  commit-message: Apply php-cs-fixer changes as of ${{ github.sha }}
                   title: Fix coding standards in ${{ github.ref }}
                   branch: php-cs-fixer/${{ github.ref }}
                   assignees: ${{ github.actor }}
-                  body: |
-                    Please apply these changes on the ${{ github.ref }} branch to fix coding standard violations.
+                  labels: php-cs-fixer
+                  body: Please merge these changes into the ${{ github.ref }} branch to fix coding standard violations.
+                  commit-message: Apply php-cs-fixer changes as of ${{ github.sha }}
 
-            - uses: unsplash/comment-on-pr@v1.2.0
+            - name: Leave a notice in the discussion when fixing code in a Pull Request
+              uses: unsplash/comment-on-pr@v1.2.0
               env:
                   GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-              if: steps.cpr.outputs.pr_number
-              continue-on-error: true # Will fail if not on PR
+              if: steps.create-pull-request.outputs.pr_number # only if PR was created in the previous step
+              continue-on-error: true # continue on failure - necessary when the current branch does not have a pending PR 
               with:
-                  msg: |
-                    @${{ github.actor }} please apply the coding standard fixes from #${{ steps.cpr.outputs.pr_number }}
-            - run: exit 1 # fail check if CS needs to be fixed
-              if: steps.cpr.outputs.pr_number
+                  msg: @${{ github.actor }} please apply the coding standard fixes from #${{ steps.create-pull-request.outputs.pr_number }}
+
+            - name: Fail the workflow when necessary CS fixes were detected
+              run: echo "Failing workflow run because CS violations were detected." && exit 1
+              if: steps.create-pull-request.outputs.pr_number
