--- a/.github/workflows/fix-cs.yml
+++ b/.github/workflows/fix-cs.yml
@@ -32,7 +32,8 @@ jobs:
               if: steps.create-pull-request.outputs.pr_number # only if PR was created in the previous step
               continue-on-error: true # continue on failure - necessary when the current branch does not have a pending PR 
               with:
-                  msg: @${{ github.actor }} please apply the coding standard fixes from #${{ steps.create-pull-request.outputs.pr_number }}
+                  msg: |
+                    @${{ github.actor }} please apply the coding standard fixes from #${{ steps.create-pull-request.outputs.pr_number }}
 
             - name: Fail the workflow when necessary CS fixes were detected
               run: echo "Failing workflow run because CS violations were detected." && exit 1
