--- a/.github/workflows/fix-cs.yml
+++ b/.github/workflows/fix-cs.yml
@@ -19,7 +19,7 @@ jobs:
                   body: |
                     Please apply these changes on the ${{ github.ref }} branch to fix coding standard violations.
 
-            - uses: unsplash/comment-on-pr@v1.2.0
+            - uses: docker://mpdude/comment-on-pr:v1.2.0
               env:
                   GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
               if: steps.cpr.outputs.pr_number
